# ru.corristo.eclipse.powerdetect

./: README.md
eclipse/ru.corristo.eclipse.powerdetect/: .project
eclipse/ru.corristo.eclipse.powerdetect.feature/: .project  feature.xml
eclipse/ru.corristo.eclipse.powerdetect.macosx32/: .project  build.properties  libpowersrc.jnilib
eclipse/ru.corristo.eclipse.powerdetect/src/ru/corristo/eclipse/powerdetect/: Activator.java  PowerSourceDetector.java  PowerSourceListener.java
native/: CMakeLists.txt  powersrc.c  powersrc.h
